objects/AW_AdviserTarget__c.object
<CustomObject>
    <description>Aggregates the weekly activity measures and also stores the targets set and year to date numbers</description>
    <fields>
        <fullName>AW_AT_CompositeID__c</fullName>
        <description>Used as a foreign key to uniquely identify AT rows. 
Format: WW-YYYY-ConsultantCode</description>
        <externalId>true</externalId>
        <label>AW AT CompositeID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>AW_ActualLeadConversionRate__c</fullName>
        <description>Actual Lead Conversion Rate</description>
        <formula>IF(

	OR(
		AND
		(
			ISBLANK(AW_ActualNumberOfLeadConverted__c),
			ISBLANK(AW_ActualNumberOfLeadOpen__c)
		),
		AW_ActualNumberOfLeadConverted__c+AW_ActualNumberOfLeadOpen__c=0
	),
	NULL,
	AW_ActualNumberOfLeadConverted__c /( AW_ActualNumberOfLeadConverted__c + AW_ActualNumberOfLeadOpen__c )
)</formula>
        <label>Actual Lead Conversion Rate</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>AW_ActualNumberOfLeadConverted__c</fullName>
        <description>Actual Number OF Leads Converted</description>
        <label>Actual Lead Converted</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AW_ActualNumberOfLeadOpen__c</fullName>
        <description>Actual Number of Open leads</description>
        <label>Actual Lead Open</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AW_ActualOpportunitiesOpen__c</fullName>
        <description>Actual Number of Open Opportunities</description>
        <label>Actual Opportunities Open</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AW_ActualOpportunitiesWon__c</fullName>
        <description>This indicates the win rate for number of opportunities won per period</description>
        <label>Actual Opportunities Won</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AW_ActualOpportunityWinRate__c</fullName>
        <description>Actual Opportunity Win Rate</description>
        <formula>IF(

	OR(
		AND
		(
			ISBLANK(AW_ActualOpportunitiesWon__c),
			ISBLANK(AW_ActualOpportunitiesOpen__c)
		),
		AW_ActualOpportunitiesWon__c+AW_ActualOpportunitiesOpen__c=0
	),
	NULL,
	AW_ActualOpportunitiesWon__c /( AW_ActualOpportunitiesWon__c + AW_ActualOpportunitiesOpen__c )
)</formula>
        <label>Actual Opportunity Win Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>AW_DateFrom__c</fullName>
        <description>Date From  of the data in the record</description>
        <formula>DATE( VALUE(AW_Year__c) , VALUE(TEXT(AW_Month__c)) ,1)</formula>
        <label>Date From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AW_DateTo__c</fullName>
        <description>Date To of the data in the record</description>
        <formula>IF(VALUE(TEXT( AW_Month__c )) = 12, 
DATE(VALUE(AW_Year__c) , 12, 31 ), 
DATE( VALUE(AW_Year__c) , VALUE(TEXT( AW_Month__c )) + 1, 1) - 1)</formula>
        <label>Date To</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>AW_FullYearTargetPCR__c</fullName>
        <description>The  target PCRs to be achieved  for the year </description>
        <label>Full Year Target Net PCR</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AW_FullYearTargetRetailActivities__c</fullName>
        <description>The target of the retail activities to be achieved  for the full year</description>
        <label>Full Year Target Net Retail Activities</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AW_FullYearTargetRiskActivities__c</fullName>
        <description>The target of the retail activities to be achieved  for the full year</description>
        <label>Full Year Target Net Risk Activities</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AW_FullYearTargetRiskPCR__c</fullName>
        <description>The target Risk PCRs for  has been set for the the full year  </description>
        <label>Full Year Target Net Risk PCR</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AW_IsCurrentMonth__c</fullName>
        <description>Check Current Month Validity</description>
        <formula>If(MONTH(Today())= VALUE(TEXT(AW_Month__c)), True, False)</formula>
        <label>Is Current Month</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AW_LeadConversionRate__c</fullName>
        <description>Lead Conversion set as target</description>
        <label>Target Lead Conversion Rate</label>
        <precision>6</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>AW_Month__c</fullName>
        <description>This indicates the month in which the activity was calculated</description>
        <label>Month</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AW_MyPersonalTargetNetPCR__c</fullName>
        <description>A personalized Net PCR target to be achieved for the year, which the adviser has set for themselves.</description>
        <label>My Personal Target Net PCR</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AW_MyPersonalTargetRetailActivities__c</fullName>
        <description>A personalized Retail Activities target to be achieved for the year, which the adviser has set for themselves.</description>
        <label>My Personal Target Retail Activities</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AW_MyPersonalTargetRiskActivities__c</fullName>
        <description>A personalized Risk Activities target to be achieved for the year, which the adviser has set for themselves.</description>
        <label>My Personal Target Risk Activities</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AW_MyPersonalTargetRiskPCR__c</fullName>
        <description>A personalized Risk PCR target to be achieved for the year, which the adviser has set for themselves.</description>
        <label>My Personal Target Risk PCR</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AW_NewLeads__c</fullName>
        <description>Number of leads set as target</description>
        <label>Target New Leads</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AW_NewOpportunities__c</fullName>
        <description>Number of opportunity set as target</description>
        <label>Target New Opportunities</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AW_OpportunityWinRate__c</fullName>
        <description>This indicates the win rate for number of opportunities won per period</description>
        <label>Target Opportunity Win Rate</label>
        <precision>6</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>AW_TargetNetPCRYTD__c</fullName>
        <description>Target Net PCR Year To Date achieved</description>
        <label>Target Net PCR YTD</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AW_TargetRetailNetActivitiesYTD__c</fullName>
        <description>Target Retail Net Activities Year To Date achieved</description>
        <label>Target Net Retail Activities YTD</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AW_TargetRiskNetActivitiesYTD__c</fullName>
        <description>Target Risk Net Activities Year To Date achieved</description>
        <label>Target Net Risk Activities YTD</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AW_TargetRiskNetPCRYTD__c</fullName>
        <description>Target Risk Net PCR Year To Date to be achieved</description>
        <label>Target Net Risk PCR YTD</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AW_TotalNetPCR__c</fullName>
        <description>This field will be rolled up from Net PCR Actual Current Week on Adviser Performance object</description>
        <label>Actual Net PCR</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AW_TotalNewLeads__c</fullName>
        <description>This is a Rollup field from Number of New Leads on Adviser Performance object</description>
        <label>Actual New Leads</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AW_TotalNewOpportunities__c</fullName>
        <description>This is a Rollup field from Number of New Opportunities on Adviser Performance object</description>
        <label>Actual New Opportunities</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AW_TotalRetailNetActivities__c</fullName>
        <description>This field is a Rollup of Net Retail Activities Current Week on Adviser Performance object</description>
        <label>Actual Net Retail Activities</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AW_TotalRiskNetActivities__c</fullName>
        <description>This field is a Rollup for field Net Risk Activities Current Week on Adviser Performance object.</description>
        <label>Actual Net Risk Activities</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AW_TotalRiskNetPCR__c</fullName>
        <description>This field will be rolled up from Risk Net PCR Current Week on Adviser Performance</description>
        <label>Actual Net Risk PCR</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AW_Year__c</fullName>
        <description>This indicates the year in which the calculation was done</description>
        <label>Year</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <label>Activity Measure Total</label>
    <listViews>
        <fullName>AW_AllAdviserTargets</fullName>
        <columns>NAME</columns>
        <columns>AW_Month__c</columns>
        <columns>AW_Year__c</columns>
        <columns>AW_TotalNetPCR__c</columns>
        <columns>AW_TargetNetPCRYTD__c</columns>
        <columns>AW_TotalRiskNetPCR__c</columns>
        <columns>AW_TargetRiskNetPCRYTD__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Totals</label>
    </listViews>
    <listViews>
        <fullName>AW_MyMonthlyAdviserTargets</fullName>
        <columns>NAME</columns>
        <columns>AW_Month__c</columns>
        <columns>AW_Year__c</columns>
        <columns>AW_TotalNetPCR__c</columns>
        <columns>AW_TargetNetPCRYTD__c</columns>
        <columns>AW_TotalRiskNetPCR__c</columns>
        <columns>AW_TargetRiskNetPCRYTD__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>AW_IsCurrentMonth__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Monthly Totals</label>
    </listViews>
    <nameField>
        <displayFormat>AT-{0000}</displayFormat>
        <label>Measure Total Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Activity Measure Totals</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>AW_OwnerMonthYear_PreventEdit</fullName>
        <active>true</active>
        <description>This validation rule prevent update of Month, Year and Owner Fields</description>
        <errorConditionFormula>AND
(
	NOT($Setup.AW_FeatureSwitches__c.AW_DisableAdviserTargetValidationRule__c), 
	NOT(ISNEW()),
	OR
	(
		ISCHANGED(AW_Month__c), 
		ISCHANGED(AW_Year__c),
		ISCHANGED(OwnerId)
	)
)</errorConditionFormula>
        <errorMessage>System controlled fields may not be updated.</errorMessage>
    </validationRules>
</CustomObject>